Fixing sidebar height on small viewport

--- a/app/watch/styles.module.scss
+++ b/app/watch/styles.module.scss
@@ -63,7 +63,8 @@
 	grid-template-columns: 1;
 	grid-template-rows: 1;
 	max-width: 100%;
-	height: 400px;
+	height: fit-content;
+	max-height: fit-content;
 }
 
 @media only screen and (min-width: 768px) {
